[package]
name = "secure-disk-erasure-server"
version = "0.1.0"
edition = "2021"
description = "Central dashboard & API for Secure Disk Erasure Tool"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
hyper = { version = "1", features = ["full"] }
http = "1"
thiserror = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde_with = "3"
